--- a/src/index.css
+++ b/src/index.css
@@ -135,11 +135,20 @@ ul {
 }
 
 .shadow-sm {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.07) !important;
 }
 
 .shadow-sm:hover {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   transition: box-shadow 250ms;
+}
+
+.login {
+  max-width: 600px;
+}
+
+.head-login {
+  margin: auto !important;
 }
 
 @media (max-width: 600px) {
