MAjor UI Improvements

--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@ ul {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(253, 255, 253, 1) !important;
+  color: #121212 !important;
   padding-left: 1rem !important;
   padding-right: 1rem !important;
 }
