--- a/src/index.css
+++ b/src/index.css
@@ -249,3 +249,28 @@ ul {
     width: 80% !important;
   }
 }
+
+.tooltip-inner {
+  max-width: 150px !important;
+}
+
+.cardClip {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 25px;
+  max-height: 72px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 15px;
+}
+
+@media (max-width: 600px) {
+  .clipboard {
+    padding: 20px !important;
+  }
+}
+
+.cardClip:hover {
+  cursor: pointer;
+}
